# studio-cli

./: Cargo.toml  README.md
src/: accesscontrol.rs  ai.rs  auth.rs  live.rs  main.rs  playback.rs  tasks.rs  users.rs
src/assets/: mod.rs
src/assets/upload/: mod.rs
