[package]
name = "studio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
colored = "2.0.0"
rand = "0.8.3"
livepeer-rs = {path = "../livepeer"}
dialoguer = "0.9.0"
log = "0.4.0"
env_logger = "0.9.0"
console = "0.15.2"
dirs = "4.0.0"
openssl = "0.10.44"
pwbox = "0.5.0"
nanoid = "0.4.0"
indicatif = "0.17.2" 
which = "4.3.0"